--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-standard": "^4.1.0",
     "gh-pages": "^3.1.0",
+    "identity-obj-proxy": "^3.0.0",
     "microbundle-crl": "^0.13.11",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
